fixed modal so it doesnt overlap nav

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -9,7 +9,13 @@
 }
 .instagrams li {
   list-style-type: none;
+  display: inline-block;
   position: relative;
+  margin: 10px;
+  padding: 10px;
+}
+
+.modal-content {
   margin: 10px;
   padding: 10px;
 }
